Uppdaterat hämta-data och text

--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -326,7 +326,7 @@ Viktigt att notera är även att det saknas uppgifter om utbildningsnivå för e
 
 Eftersom en gymnasieutbildning förbättrar möjligheten att etablera sig på arbetsmarknaden, är en viktig aspekt att undersöka hur stor andel av avgångseleverna i årskurs 9 i länet som är behöriga till att påbörja gymnasiestudier. Ofullständiga eller låga betyg är i första hand ett problem för den enskilde, då personens valmöjligheter begränsas och etableringen på arbetsmarknaden försvåras. Att en stor andel elever inte blir behöriga till gymnasiet kan även innebära ett samhällsproblem. Samhället misslyckas med att ta tillvara på elevernas potential om de inte når målen för utbildningen i skolan. Det finns även ett starkt samband mellan dåliga skolresultat och sociala problem [(Westin Lundqvist, W. m fl, 2019)](https://www.hv.se/contentassets/82eff73069584573b03f43956b661c05/laga-skolresultat-i-socialt-utsatta-omraden_.pdf){target="_blank"}^[Westin Lundqvist, W., Assmo, P. och Sunnemark, F., 2019. Låga skolresultat i socialt utsatta områden, Högskolan i Väst.]. 
 
-Skillnaden i andelen behöriga till gymnasiet hos avgångselever i årskurs 9 mellan inrikes och utrikes födda är fortsatt stor i Dalarna. Sedan 2005 har gymnasiebehörigheten för inrikes födda minskat från över 90 procent till cirka 85 procent år 2023. Skillnaden mellan inrikes födda pojkar och flickor är marginell och utvecklingen har varit svagt negativ sedan 2005. 
+Skillnaden i andelen behöriga till gymnasiet hos avgångselever i årskurs 9 mellan inrikes och utrikes födda är fortsatt stor i Dalarna. Sedan `r ar_min` har gymnasiebehörigheten för inrikes födda minskat från `r inrikes_behorighet_gym_ar_min_bada` procent till `r inrikes_behorighet_gym_ar_max_bada` procent år `r ar_max`. Skillnaden mellan inrikes födda pojkar och flickor är marginell och utvecklingen har varit svagt negativ sedan `r ar_min`. 
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
@@ -335,10 +335,9 @@ Skillnaden i andelen behöriga till gymnasiet hos avgångselever i årskurs 9 me
 ```
 <br>
 
-För utrikes födda, både pojkar och flickor har det varit en stor variation under de senaste 20 åren. 2005 var behörigheten för flickor cirka 5 procentenheter lägre än för inrikes födda flickor. För utrikes födda pojkar var skillnaden nästan tre gånger så stor vid samma tidpunkt. Sedan dess har andelen behöriga utrikes födda flickor fallit fram till 2017, för att därefter öka till omkring 66 procent år 2023. För utrikes födda pojkar var minskningen som störst fram till 2011 för att därefter öka från 44 procent till 68 procent år 2023. Det innebär att utrikes födda pojkar har en högre andel behöriga till gymnasiet än utrikes födda flickor år 2023, vilket är första gången sedan 2013.
+För utrikes födda, både pojkar och flickor har det varit en stor variation under de senaste 20 åren. 2005 var behörigheten för utrikes födda flickor cirka 5 procentenheter lägre än för inrikes födda flickor. För utrikes födda pojkar var skillnaden nästan tre gånger så stor vid samma tidpunkt. Sedan dess har andelen behöriga utrikes födda flickor fallit fram till 2017, för att därefter öka till `r utrikes_behorighet_gym_ar_max_flickor` procent år `r ar_max`. För utrikes födda pojkar var minskningen som störst fram till 2011 för att därefter öka från `r utrikes_behorighet_gym_ar_2011_pojkar` procent till `r utrikes_behorighet_gym_ar_max_pojkar` procent år `r ar_max`. Det innebär att utrikes födda pojkar har en högre andel behöriga till gymnasiet än utrikes födda flickor år `r ar_max`, vilket är första gången sedan 2013.
 
-Det finns stora skillnader i gymnasiebehörighet mellan grupper med olika vistelsetid i Dalarna där behörigheten är större ju längre eleverna har vistats i Sverige (se diagram nedan). Behörigheten för elever som går ut årskurs 9 med en vistelsetid som är 10 år eller längre, är i det närmaste att likställa med behörigheten för inrikes födda. I gruppen med en vistelsetid 4-9 år är behörigheten omkring 20 procentenheter lägre och i gruppen vistelsetid 2-3 år är den ytterligare drygt 20 procentenheter lägre, vilket innebär att knappt 40 procent i gruppen har gymnasiebehörighet.
-
+Det finns stora skillnader i gymnasiebehörighet mellan grupper med olika vistelsetid i Dalarna där behörigheten är större ju längre eleverna har vistats i Sverige (se diagram nedan). Behörigheten för elever som går ut årskurs 9 med en vistelsetid som är 10 år eller längre, är i det närmaste att likställa med behörigheten för inrikes födda. I gruppen med en vistelsetid 4-9 år är behörigheten omkring `r utrikes_skillnad_10_jmf_4_9` procentenheter lägre och i gruppen vistelsetid 2-3 år är den ytterligare `r utrikes_skillnad_4_9_jmf_2_3` procentenheter lägre, vilket innebär att ungefär `r utrikes_2_3_andel` procent i gruppen har gymnasiebehörighet.
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
@@ -351,7 +350,7 @@ Det finns stora skillnader i gymnasiebehörighet mellan grupper med olika vistel
 
 En annan aspekt som är viktig att mäta är hur stor andel av avgångseleverna i gymnasiet som är behöriga till att påbörja högskolestudier. En problematik att ta hänsyn till är att SCB justerat statistiken för behöriga till högskolan under 2014-2016, vilket påverkar andelarna (se statistikfotnot hos [SCB](https://www.statistikdatabasen.scb.se/pxweb/sv/ssd/START__AA__AA0003__AA0003H/IntGr8RikKON2/){target="_blank"}). För dessa år minskar den genomsnittliga andelen behöriga med 8-9 procentenheter. Större variationer kan finnas regionalt.
 
-Diagrammet nedan visar att utvecklingen för inrikes födda är relativt opåverkad fram till 2013, men från 2015 faller andelen behöriga markant. Minskningen är som störst för män, nästan 30 procentenheter. 2023 var andelen högskolebehöriga inrikes födda män under 52 procent. Andelen högskolebehöriga inrikes födda kvinnor har också minskat under perioden, men inte i samma utsträckning. 2023 är cirka 74 procent behöriga.
+Diagrammet nedan visar att utvecklingen för inrikes födda är relativt opåverkad fram till 2013, men från 2014 (syns inte i diagrammet nedan) faller andelen behöriga markant. Minskningen är som störst för män, nästan `r skillnad_2013_senaste_man` procentenheter mellan 2013 och `r ar_max`. År `r ar_max` var andelen högskolebehöriga inrikes födda män ungefär `r inrikes_behorighet_hog_ar_max_man` procent. Andelen högskolebehöriga inrikes födda kvinnor har också minskat under perioden, men inte i samma utsträckning. `r ar_max` är cirka `r inrikes_behorighet_hog_ar_max_kvinnor` procent behöriga.
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
@@ -360,9 +359,9 @@ Diagrammet nedan visar att utvecklingen för inrikes födda är relativt opåver
 ```
 <br>
 
-Skillnaderna mellan inrikes och utrikes födda när det gäller högskolebehörighet är inte lika stora som i fallet med gymnasiebehörighet. Fram till 2013 är skillnaden några procentenheter för både kvinnor och män, men därefter faller andelen utrikes födda män med högskolebehörighet till under 48 procent år 2021. 2023 kan dock observeras en markant förbättring för männen. För kvinnor är inte nedgången alls lika påtaglig, utan liknar mer den för inrikes födda kvinnor. Sannolikt är detta en effekt av vilka som tagit en gymnasieexamen eller erhållit ett studiebevis.
+Skillnaderna mellan inrikes och utrikes födda när det gäller högskolebehörighet är inte lika stora som i fallet med gymnasiebehörighet. Fram till 2013 är skillnaden några procentenheter för både kvinnor och män, men därefter faller andelen utrikes födda män med högskolebehörighet till under `r utrikes_behorighet_hog_ar_2021_man` procent år 2021. `r ar_max` kan dock observeras en markant förbättring för männen. För kvinnor är inte nedgången alls lika påtaglig, utan liknar mer den för inrikes födda kvinnor. Sannolikt är detta en effekt av vilka som tagit en gymnasieexamen eller erhållit ett studiebevis.
 
-Det som kan konstateras är dock att 2023 är andelen behöriga inrikes och utrikes födda kvinnor i princip densamma, medan för män är det en högre andel utrikes födda män som är behöriga. Den här utvecklingen verifierar vistelsetidens betydelse för studieresultat och integrationen. Invandringen från 2015 i kombination med statistikförändringen påverkade behörigheten till högskolan för utrikes födda män under ett antal år, men 2023 är nivån likvärdig med den som rådde för inrikes födda män för tio år sedan. Noterbart är också att oavsett om eleven är utrikes eller inrikes född, är kvinnor i högre utsträckning behöriga till att påbörja högskolestudier än män. 
+Det som kan konstateras är dock att `r ar_max` är andelen behöriga inrikes och utrikes födda kvinnor i princip densamma, medan för män är det en högre andel utrikes födda män som är behöriga. Den här utvecklingen verifierar vistelsetidens betydelse för studieresultat och integrationen. Invandringen från 2015 i kombination med statistikförändringen påverkade behörigheten till högskolan för utrikes födda män under ett antal år, men `r ar_max` är nivån likvärdig med den som rådde för inrikes födda män för tio år sedan. Noterbart är också att oavsett om eleven är utrikes eller inrikes född, är kvinnor i högre utsträckning behöriga till att påbörja högskolestudier än män. 
 
 ## Arbetslöshet och sysselsättning
 I förlängningen av att studera är att arbeta en viktig komponent i integrationen i samhället. Utrikes födda har generellt en svagare ställning på arbetsmarknaden, vilket speglas i att sysselsättningen bland utrikes födda är lägre än bland inrikes födda personer och arbetslösheten, inklusive långtidsarbetslösheten, är högre. Forskning visar att bland annat härkomst, ålder, kön, utbildningsnivå, konjunkturläge, språkkunskaper och kontaktnät är avgörande för utrikes föddas möjligheter att etablera sig på arbetsmarknaden [(IFAU, 2022)](https://www.ifau.se/Press/Forskningssammanfattningar/Utrikes-foddas-eta-pa-arbetsmarknaden-/){target="_blank"}.^[IFAU. Utrikes föddas etablering på arbetsmarknaden (2022-11-19).] Arbetslöshets- och sysselsättningsnivåerna bland utrikes födda varierar dock stort mellan olika grupper.
