--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -350,7 +350,7 @@ Det finns stora skillnader i gymnasiebehörighet mellan grupper med olika vistel
 
 En annan aspekt som är viktig att mäta är hur stor andel av avgångseleverna i gymnasiet som är behöriga till att påbörja högskolestudier. En problematik att ta hänsyn till är att SCB justerat statistiken för behöriga till högskolan under 2014-2016, vilket påverkar andelarna (se statistikfotnot hos [SCB](https://www.statistikdatabasen.scb.se/pxweb/sv/ssd/START__AA__AA0003__AA0003H/IntGr8RikKON2/){target="_blank"}). För dessa år minskar den genomsnittliga andelen behöriga med 8-9 procentenheter. Större variationer kan finnas regionalt.
 
-Diagrammet nedan visar att utvecklingen för inrikes födda är relativt opåverkad fram till 2013, men från 2014 (syns inte i diagrammet nedan) faller andelen behöriga markant. Minskningen är som störst för män, nästan `r skillnad_2013_senaste_man` procentenheter mellan 2013 och `r ar_max`. År `r ar_max` var andelen högskolebehöriga inrikes födda män ungefär `r inrikes_behorighet_hog_ar_max_man` procent. Andelen högskolebehöriga inrikes födda kvinnor har också minskat under perioden, men inte i samma utsträckning. `r ar_max` är cirka `r inrikes_behorighet_hog_ar_max_kvinnor` procent behöriga.
+Diagrammet nedan visar att utvecklingen för inrikes födda är relativt opåverkad fram till 2013, men från 2014 (syns inte i diagrammet nedan) faller andelen behöriga markant. Minskningen är som störst för män, ca `r skillnad_2013_senaste_man` procentenheter mellan 2013 och `r ar_max`. År `r ar_max` var andelen högskolebehöriga inrikes födda män ungefär `r inrikes_behorighet_hog_ar_max_man` procent. Andelen högskolebehöriga inrikes födda kvinnor har också minskat under perioden, men inte i samma utsträckning. `r ar_max` är cirka `r inrikes_behorighet_hog_ar_max_kvinnor` procent behöriga.
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
@@ -359,7 +359,7 @@ Diagrammet nedan visar att utvecklingen för inrikes födda är relativt opåver
 ```
 <br>
 
-Skillnaderna mellan inrikes och utrikes födda när det gäller högskolebehörighet är inte lika stora som i fallet med gymnasiebehörighet. Fram till 2013 är skillnaden några procentenheter för både kvinnor och män, men därefter faller andelen utrikes födda män med högskolebehörighet till under `r utrikes_behorighet_hog_ar_2021_man` procent år 2021. `r ar_max` kan dock observeras en markant förbättring för männen. För kvinnor är inte nedgången alls lika påtaglig, utan liknar mer den för inrikes födda kvinnor. Sannolikt är detta en effekt av vilka som tagit en gymnasieexamen eller erhållit ett studiebevis.
+Skillnaderna mellan inrikes och utrikes födda när det gäller högskolebehörighet är inte lika stora som i fallet med gymnasiebehörighet. Fram till 2013 är skillnaden några procentenheter för både kvinnor och män, men därefter faller andelen utrikes födda män med högskolebehörighet till ungefär `r utrikes_behorighet_hog_ar_2021_man` procent år 2021. `r ar_max` kan dock observeras en markant förbättring för männen. För kvinnor är inte nedgången alls lika påtaglig, utan liknar mer den för inrikes födda kvinnor. Sannolikt är detta en effekt av vilka som tagit en gymnasieexamen eller erhållit ett studiebevis.
 
 Det som kan konstateras är dock att `r ar_max` är andelen behöriga inrikes och utrikes födda kvinnor i princip densamma, medan för män är det en högre andel utrikes födda män som är behöriga. Den här utvecklingen verifierar vistelsetidens betydelse för studieresultat och integrationen. Invandringen från 2015 i kombination med statistikförändringen påverkade behörigheten till högskolan för utrikes födda män under ett antal år, men `r ar_max` är nivån likvärdig med den som rådde för inrikes födda män för tio år sedan. Noterbart är också att oavsett om eleven är utrikes eller inrikes född, är kvinnor i högre utsträckning behöriga till att påbörja högskolestudier än män. 
 
